--- a/comic.html
+++ b/comic.html
@@ -7,15 +7,20 @@
   <title>Net Cafe: Comic</title>
 </head>
 <body>
-  <img src="./images/strip1 (20230804030256).png" alt=""  id="comic1">
-  <img src="./images/strip2 (20230804031529).png" alt=""  id="comic2">
-  <img src="./images/strip3 (20230804042923).png" alt=""  id="comic3">
-  <img src="./images/strip4 (20230804034319).png" alt=""  id="comic4">
-  <img src="./images/strip5 (20230804035338).png" alt=""  id="comic5">
-  <img src="./images/strip6ithink (20230804040124).png" alt=""  id="comic6">
-  <img src="./images/strip7 (20230804040715).png" alt=""  id="comic7">
-  <img src="./images/stripidk (20230804041809).png" alt=""  id="comic8">
-  <img src="./images/stripstrip (20230804042121).png" alt=""  id="comic9">
+
+  <div onclick="scrollToBottom()" class="scrollBottom">To The Pit</div>
+
+  <img src="./images/strip1.png" alt=""  id="comic1">
+  <img src="./images/strip2.png" alt=""  id="comic2">
+  <img src="./images/strip3.png" alt=""  id="comic3">
+  <img src="./images/strip4.png" alt=""  id="comic4">
+  <img src="./images/strip5.png" alt=""  id="comic5">
+  <img src="./images/strip6.png" alt=""  id="comic6">
+  <img src="./images/strip7.png" alt=""  id="comic7">
+  <img src="./images/strip8real.png" alt=""  id="comic8">
+  <img src="./images/strip10real.png" alt=""  id="comic9">
+  <img src="./images/new9strip.png" alt=""  id="comic10">
+  <img src="./images/new11strip.png" alt=""  id="comic11">
 
   <h2>So uh yeah, that's it so far...</h2>
 
