--- a/comic.html
+++ b/comic.html
@@ -28,7 +28,7 @@
     <div>
   <a href="./index.html" class="cbtn-m">Home</a>
   </div>
-  <div onclick="scrollToTop()" class="scrollTop">Back To Top</div>
+  <div onclick="scrollToTop()" class="scrollTop">To Safety</div>
   </div>
 
   <footer> mcodes &copy; </footer>
